Adding style, API data into Js, organising partials

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,9 @@
-/* CSS Document */
 
 @import 'variables';
 @import 'mixins';
 @import 'reset';
 @import 'globals';
-@import 'navigation';
+@import 'fonts';
+@import 'main';
+
 
