--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -9,18 +9,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    justify-content: center;
     width: 100%;
     height: 95%;
-    text-align: center;
-    font-size: 0.8em;
+    font-size: $font-size;
     @extend %title-set-up;
     
     .logo {
         width: 50%;
-        padding: 150px 20px 20px 20px;
     } 
     p {
-        font-size: $font-size + 0.3em;
+        font-size: $font-size;
         color: $text-color;
         padding-bottom: 20px;
         padding-top: 30px;
@@ -33,11 +33,11 @@ body {
             flex-direction: row;
             justify-content: center;
 
-            .logo {
+            .logo{
                 width: 25%;
                 padding: 0px 20px 0px 0px;
             }
-            section {
+            .section {
                 display: flex;
                 flex-direction: column;
             }
@@ -51,9 +51,9 @@ body {
 
         .logo {
             width: 20%;
-            padding: 0px 20px 0px 20px;
+            padding: 20px 20px 0px 20px;
         }
-        section {
+        .section {
             display: flex;
             flex-direction: column;
         }
@@ -99,10 +99,87 @@ body {
             opacity: 0;
             bottom: -100px;
             transition: 0.5s;
-            // display: block;
             width: 94%;
         }
+        .articleBox {
+
+        }
     }
+}
+
+.moving-logo {
+    animation: moving-logo 1s ease-in-out both;
+    @include tablet {
+        animation: moving-logo-tablet 1s ease-in-out both;
+    }
+    @include desktop {
+        animation: moving-logo-desktop 1s ease-in-out both;
+    }
+    }
+
+
+.moving-section {
+    animation: moving-section 1s ease-in-out both;
+    @include tablet {
+        animation: moving-section-tablet 1s ease-in-out both;
+    }
+    @include desktop {
+        animation: moving-section-desktop 1s ease-in-out both;
+    }
+}
+.moving-body {
+    animation: moving-body 1s ease-in-out both;
+    @include tablet {
+        animation: moving-body-tablet 1s ease-in-out both;
+    }
+    @include desktop {
+        animation: moving-body-desktop 1s ease-in-out both
+    }
+}
+
+/* Mobile Header Animation */
+
+@keyframes moving-logo{
+    0% {transform: translateY(0px) scale(1);}
+    100% {transform: translate(0px, 250px) scale(0.5);}
+}
+@keyframes moving-section{
+    0% {transform: translateY(0px);}
+    100% {transform: translate(0px, 200px);}
+}
+@keyframes moving-body{
+    0% {transform: translateY(0px);}
+    100% {transform: translateY(-500px);}
+}
+
+/* Tablet Header Animation */
+
+@keyframes moving-logo-tablet{
+    0% {transform: translateY(0px) scale(1);}
+    100% {transform: translate(-5px, 300px) scale(0.5);}
+}
+@keyframes moving-section-tablet{
+    0% {transform: translateY(0px);}
+    100% {transform: translate(-50px, 300px);}
+}
+@keyframes moving-body-tablet{
+    0% {transform: translateY(0px);}
+    100% {transform: translateY(-600px);}
+}
+
+/* Desktop Header Animation */
+
+@keyframes moving-logo-desktop{
+    0% {transform: translateY(0px) scale(1);}
+    100% {transform: translate(-100px, 320px) scale(0.3);}
+}
+@keyframes moving-section-desktop{
+    0% {transform: translateY(0px);}
+    100% {transform: translate(-200px, 320px);}
+}
+@keyframes moving-body-desktop{
+    0% {transform: translateY(0px);}
+    100% {transform: translateY(-650px);}
 }
 
 .articleContainer:hover .articleTitle {
@@ -111,11 +188,12 @@ body {
 }
 
 footer {
+    @extend %title-set-up;
     color: #c2c2c2;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: $font-size - 0.3em;
+    font-size: $font-size;
 
     @include desktop {
         text-align: left;
@@ -123,11 +201,4 @@ footer {
     }
 }
 
-// .moving {
-//     animation: scaling 2s both;
-// }
 
-@keyframes scaling {
-    0% {transform: translate(0) scale(1);}
-    100% {transform: translateY(150px) scale(0.5);}
-}
