--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,8 +1,8 @@
-$font-size: 1em;
-$text-color: white;
+$font-size: 16px;
+$text-color: #ffffff;
 
 %title-set-up {
-    color: white;
+    color: #ffffff;
     font-family: 'Open Sans';
     font-weight: 300;
     font-style: normal;
